# list-ingestor

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  config.py  debug_ai_parser.py  debug_ocr.py  docker-compose.yml  example_catalog.csv  fly.toml  import_branch_catalogs.py  import_catalog.py  ingest_csv.py  rebuild_catalogs.bat  render.yaml  requirements.txt  run.py  sku_cleaner.py  sync_customer_job_context.py  test_batch.py  test_raw_ocr.py  vercel.json  verify_models.py
api/: index.py  parse_list.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py
app/services/: ai_parser.py  catalog_importer.py  chatgpt_parser.py  context_interpreter.py  customer_job_context.py  fuzzy_matcher.py  item_matcher.py  metrics_service.py  ocr_service.py  parse_pipeline.py  parse_types.py  size_parser.py  sku_pipeline.py  upload_context.py  vector_index.py  vision_extract_service.py
app/templates/: admin_users.html  base.html  catalog.html  index.html  (+3 more)
data/: erp_items_ai_ready.csv
database/: init.sql
docs/: HOSTING_DECISION.md  OPS_NOTES_2026-03-18.md  PI_WORKFLOW.md  SKU_REFRESH_WORKFLOW.md
scripts/: delete-merged-branches.sh
services/: __init__.py  claude_vision.py  fuzzy_matcher.py  item_matcher.py  list_parser.py  openai_vision.py  size_parser.py  sku_matcher.py  vector_index.py
tests/: test_catalog_importer.py  test_catalog_upload.py  test_customer_job_context.py  test_matching.py  test_ocr_service.py  test_openai_vision.py  test_parse_pipeline.py  test_sku_pipeline.py  test_upload_context.py  test_upload_formats.py
(+3 files in other folders)
